// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitCommitNodeByline > author (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="text-truncate"
    >
      committed by 
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline > author 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="text-truncate"
    >
      committed by 
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline > different author and committer (compact) 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-2"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       authored and committed by 
      <a
        class="font-weight-bold"
        href="https://example.com/bobyang"
      >
        Bob Yang
      </a>
       
      <span
        class="timestamp"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline > different author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div
      class="flex-shrink-0"
    >
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar"
        role="presentation"
        src="http://example.com/alice.png"
      />
       
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-2"
        role="presentation"
        src="http://example.com/bob.png"
      />
    </div>
    <div
      class="overflow-hidden"
    >
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       authored and committed by 
      <a
        class="font-weight-bold"
        href="https://example.com/bobyang"
      >
        Bob Yang
      </a>
       
      <span
        class="timestamp"
      >
        about 15 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline > omit GitHub committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="text-truncate"
    >
      committed by 
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`GitCommitNodeByline > same author and committer 1`] = `
<DocumentFragment>
  <div
    class=""
    data-testid="git-commit-node-byline"
  >
    <div>
      <img
        aria-hidden="true"
        class="mdi-icon iconInline userAvatar mr-1 mr-2"
        role="presentation"
        src="http://example.com/alice.png"
      />
    </div>
    <div
      class="text-truncate"
    >
      committed by 
      <span
        class="font-weight-bold"
      >
        Alice Zhao
      </span>
       
      <span
        class="timestamp"
      >
        about 16 years ago
      </span>
    </div>
  </div>
</DocumentFragment>
`;
